@@ -6,7 +6,8 @@ Changes in the next release:
 * The Toolchain module no longer misidentifies clang on FreeBSD.
 
 * The Toolchain module has initial integration test suite that checks the real
-  interaction with the host system.
+  interaction with the host system. The integration test suite has reference
+  data for FreeBSD and MacOS.
 
 Changes in 0.4.2:
 
